# llm-eval-ci

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  eval-gate.yml
examples/rag_support_bot/: README.md  baseline.json  eval.yaml  golden.jsonl  system_v1.py  system_v2_regression.py  traces.jsonl
llm_eval_ci/: __init__.py  cli.py  config.py  ingest.py  models.py  report.py  runner.py
llm_eval_ci/graders/: __init__.py  base.py  heuristic.py  llm_judge.py
scripts/: demo.sh
tests/: test_runner.py
