[project]
name = "llm-eval-ci"
version = "0.1.0"
description = "Turn real production traces into a trusted golden regression set + calibrated LLM-judge graders + a CI gate that fails the PR when answer quality silently regresses."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Omar G. Nagy" }]
keywords = ["llm", "evaluation", "eval", "regression-testing", "llm-as-judge", "rag", "ci", "golden-dataset"]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=7.0"]

[project.scripts]
llm-eval-ci = "llm_eval_ci.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llm_eval_ci*"]
